--- a/cv.html
+++ b/cv.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz|Open+Sans:400,600,700|Oswald|Electrolize" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz|Open+Sans:400,600,700|Oswald|Electrolize" />
     <!--[if lt IE 9]>
-    <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
         h1, h2, h3, h4 {
@@ -18,7 +18,7 @@
             font-family: 'Oswald', sans-serif;
             font-weight: normal;
         }
-        h1 {
+        h1, h5 {
             font-weight: bold;
         }
         .dark {
@@ -136,6 +136,14 @@
 							<div class="progress">
 								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
 									<span class="sr-only">60%</span>
+								</div>
+							</div>
+						</dd>
+						<dt>jQuery</dt>
+                        <dd>
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 70%">
+									<span class="sr-only">70%</span>
 								</div>
 							</div>
 						</dd>
@@ -376,79 +384,98 @@
                     <h3 class="dark">Expériences <span class="light">Professionnelles</span></h3>
 					<img src="images/decathlon.jpg" alt="Décathlon Services" class="pull-right img-responsive" />
                     <h4>Décathlon Services</h4>
-                    <h5>Lead Développeur /// 2009 -> Aujourd'hui</h5>
-                    Refonte du système de gestion des avis utilisateurs
-                    <ul>
-                        <li>Framework Symfony2</li>
-                        <li>Développement PHP5, JavaScript (jQuery, Ajax)</li>
-                        <li>Base de données MySQL</li>
-                        <li>Messaging RabbitMQ</li>
-                        <li>Moteur de recherche ElasticSearch</li>
-                        <li>API REST</li>
-                        <li>Intégration Responsive Design HTML5, CSS3</li>
-                    </ul>
-					<span class="label label-primary">Symfony2</span>
+                    <h5>Lead Développeur /// 2013 -> Aujourd'hui</h5>
+                    <p>Refonte du système de gestion des avis utilisateurs</p>
+                    <span class="label label-primary">Symfony2</span>
 					<span class="label label-success">MySQL</span>
 					<span class="label label-success">ElasticSearch</span>
 					<span class="label label-info">API REST</span>
 					<span class="label label-info">RabbitMQ</span>
+					<span class="label label-primary">jQuery</span>
 					<span class="label label-warning">Responsive Design</span>
+					<h5>Chef de projet Web /// 2011 -> 2013</h5>
+					<p>Réalisation des sites Web de co-conception</p>
+					<ul>
+						<li>http://www.btwinlab.com [Ce site n'est plus disponible]</li>
+					</ul>
+					<span class="label label-primary">.NET 3.5</span>
+					<span class="label label-primary">ASP.NET / C#</span>
+					<span class="label label-success">SQL Server</span>
+					<span class="label label-warning">HTML</span>
+					<span class="label label-warning">CSS</span>
+					<ul>
+						<li>http://openinno.novadry.com [Ce site n'est plus disponible]</li>
+						<li><a href="http://openidea.decathlon.com">http://openidea.decathlon.com</a></li>
+					</ul>
+					<span class="label label-primary">Symfony2</span>
+					<span class="label label-success">MySQL</span>
+					<span class="label label-warning">HTML</span>
+					<span class="label label-warning">CSS</span>
+					<h5>Chef de projet Web /// 2009 -> 2011</h5>
+					<p>Réalisation des sites Web communautaires des marques Décathlon (Quechua, b'Twin, Tribord, Wed'ze, etc.)</p>
+					<ul>
+						<li>http://www.quechua-club.com [Ce site n'est plus disponible]</li>
+						<li>http://www.btwinclub.com [Ce site n'est plus disponible]</li>
+						<li>http://www.tribordclub.com [Ce site n'est plus disponible]</li>
+					</ul>
+					<span class="label label-primary">.NET 3.5</span>
+					<span class="label label-primary">ASP.NET / C#</span>
+					<span class="label label-success">SQL Server</span>
+					<span class="label label-warning">HTML</span>
+					<span class="label label-warning">CSS</span>
 					<hr />
 					<img src="images/chassoprix.jpg" alt="Chassoprix" class="pull-right img-responsive" />
                     <h4>Chassoprix /// Chassoreduc (Projets personnels)</h4>
-                    <h5>WebMaster /// 2005 -> 2014</h5>
-					<a href="https://web.archive.org/web/*/http://www.chassoprix.com" target="_blank">https://web.archive.org/web/*/http://www.chassoprix.com</a>
-                    Refonte du système de gestion des avis utilisateurs
+                    <h5>WebMaster [Chassoprix] /// 2005 -> 2014</h5>
+                    <p>Refonte du système de gestion des avis utilisateurs</p>
                     <ul>
-                        <li>Framework Symfony2</li>
-                        <li>Développement PHP5, JavaScript (jQuery, Ajax)</li>
-                        <li>Base de données MySQL</li>
-                        <li>Messaging RabbitMQ</li>
-                        <li>Moteur de recherche ElasticSearch</li>
-                        <li>API REST</li>
-                        <li>Intégration Responsive Design HTML5, CSS3</li>
+                        <li><a href="https://web.archive.org/web/*/http://www.chassoprix.com" target="_blank">https://web.archive.org/web/*/http://www.chassoprix.com</a></li>
                     </ul>
+                    <span class="label label-primary">PHP</span>
 					<span class="label label-primary">Symfony 1.4</span>
 					<span class="label label-primary">Symfony2</span>
+					<span class="label label-success">MySQL</span>
+					<span class="label label-default">SEO</span>
+					<span class="label label-warning">Design</span>
+					<h5>WebMaster [Chassoreduc] /// 2007 -> 2010</h5>
+                    <p>Refonte du système de gestion des avis utilisateurs</p>
+                    <ul>
+                        <li><a href="https://web.archive.org/web/*/http://www.chassoreduc.com" target="_blank">https://web.archive.org/web/*/http://www.chassoreduc.com</a></li>
+                    </ul>
+					<span class="label label-primary">PHP</span>
 					<span class="label label-success">MySQL</span>
 					<span class="label label-default">SEO</span>
 					<span class="label label-warning">Design</span>
 					<hr />
 					<img src="images/scotler.jpg" alt="Scotler" class="pull-right img-responsive" />
                     <h4>Scotler</h4>
-                    <h5>Ingénieur Études & Développement /// 2008 -> 2009</h5>
-                    Refonte du système de gestion des avis utilisateurs
+                    <h5>Ingénieur Études &amp; Développement /// 2008 -> 2009</h5>
+                    <h6>Mission en régie chez Agapes Restauration (Groupe Flunch)</h6>
+                    <p>Refonte du site flunch.fr</p>
                     <ul>
-                        <li>Framework Symfony2</li>
-                        <li>Développement PHP5, JavaScript (jQuery, Ajax)</li>
-                        <li>Base de données MySQL</li>
-                        <li>Messaging RabbitMQ</li>
-                        <li>Moteur de recherche ElasticSearch</li>
-                        <li>API REST</li>
-                        <li>Intégration Responsive Design HTML5, CSS3</li>
+                        <li><a href="http://www.flunch.fr" target="_blank">http://www.flunch.fr</a></li>
                     </ul>
 					<span class="label label-primary">.NET</span>
 					<span class="label label-primary">ASP.NET / C#</span>
-					<span class="label label-success">SQL Server</span>
+					<span class="label label-success">Oracle</span>
+					<p>Développent du site flunch-traiteur.fr</p>
+					<ul>
+                        <li><a href="http://www.flunch-traiteur.fr" target="_blank">http://www.flunch-traiteur.fr</a></li>
+                    </ul>
+					<span class="label label-primary">.NET</span>
+					<span class="label label-primary">ASP.NET / C#</span>
 					<span class="label label-success">Oracle</span>
             		<hr />
 					<img src="images/webdistrib.jpg" alt="WebDistrib" class="pull-right img-responsive" />
                     <h4>WebDistrib</h4>
                     <h5>Développeur Web /// 2003 -> 2008</h5>
-                    Refonte du système de gestion des avis utilisateurs
-                    <ul>
-                        <li>Framework Symfony2</li>
-                        <li>Développement PHP5, JavaScript (jQuery, Ajax)</li>
-                        <li>Base de données MySQL</li>
-                        <li>Messaging RabbitMQ</li>
-                        <li>Moteur de recherche ElasticSearch</li>
-                        <li>API REST</li>
-                        <li>Intégration Responsive Design HTML5, CSS3</li>
-                    </ul>
+                    <p>Refonte du système de gestion des avis utilisateurs</p>
 					<span class="label label-primary">PHP</span>
 					<span class="label label-success">MySQL</span>
 					<span class="label label-warning">HTML</span>
 					<span class="label label-warning">CSS</span>
+					<h5>Conseiller clientèle /// 2004 -> 2008</h5>
+                    <p>Refonte du système de gestion des avis utilisateurs</p>
                 </div>
                 <div class="block last">
                     <h3 class="dark">Formation <span class="light">Éducation</span></h3>
@@ -462,7 +489,7 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </body>
 </html>
