progress to star

--- a/cv.html
+++ b/cv.html
@@ -50,6 +50,20 @@
 		}
 		.progress {
 			margin-bottom: 5px;
+			height: 18px;
+			border: none;
+			border-radius: 0;
+			box-shadow: none;
+			background: none;
+		}
+		.progress-bar {
+			background-image: url(images/star.png);
+			background-size: auto;
+			-webkit-background-size: auto;
+			line-height: 18px;
+			border: none;
+			box-shadow: none;
+			-webkit-box-shadow: none;
 		}
 		.progress-bar-warning {
 			background-color: #663399;	
