--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>David Delevoye /// Chef de Projet Web - Lead Développeur Symfony2</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz|Open+Sans:400,600,700|Oswald|Electrolize" />
@@ -389,6 +389,14 @@
 								</div>
 							</div>
 						</dd>
+                        <dt>Kanban</dt>
+                        <dd>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
+                                    <span class="sr-only">60%</span>
+                                </div>
+                            </div>
+                        </dd>
 						<dt>Wireframing</dt>
                         <dd>
 							<div class="progress">
