--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                     <span class="label label-success">MySQL</span>
                     <span class="label label-warning">HTML</span>
                     <span class="label label-warning">CSS</span>
-                    <h5>Conseiller clientèle /// 2004 -> 2008</h5>
+                    <h5>Conseiller clientèle /// 2004 -&rsaquo; 2008</h5>
                     <p>
                         Accueil téléphonique et en point de retrait des clients, Résolution des litiges transporteurs et fournisseurs, Détection des fraudes, SAV, Remboursement.
                     </p>
