--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="col-md-8 col-md-offset-2">
             <h1 class="light">David <span class="dark">Delevoye</span></h1>
-            <h2 class="dark">Chef de Projet Web / Développeur</h2>
+            <h2 class="dark">Chef de Projet Web / Lead Développeur</h2>
             <div class="row">
                 <div class="col-md-4">
                     <span class="dark">Tél :</span>
