--- a/index.html
+++ b/index.html
@@ -553,6 +553,9 @@
                     <p>
                         <i>Développement et maintenance du site webdistrib.com</i>
                     </p>
+                    <ul>
+                        <li><a href="http://www.webdistrib.com" target="_blank">http://www.webdistrib.com</a></li>
+                    </ul>
                     <span class="label label-primary">PHP</span>
                     <span class="label label-success">MySQL</span>
                     <span class="label label-warning">HTML</span>
