--- a/index.html
+++ b/index.html
@@ -249,6 +249,14 @@
 								</div>
 							</div>
 						</dd>
+			<dt>Capistrano</dt>
+                        <dd>
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
+									<span class="sr-only">50%</span>
+								</div>
+							</div>
+						</dd>
 						<dt>Apache 2</dt>
                         <dd>
 							<div class="progress">
