--- a/index.html
+++ b/index.html
@@ -444,6 +444,8 @@
                     <p>
                         <i>Refonte du système de gestion des avis utilisateurs</i>
                         <br />
+                        Développement du Back-Office et des APIs sous Symfony2
+                        <br />
                         Développement du module Prestashop d'intégration du service.
                     </p>
                     Fonctionnalités &amp; Services:
@@ -451,7 +453,7 @@
                         <li>Multilingue</li>
                         <li>Multi theming</li>
                         <li>Intégration JavaScript</li>
-                        <li>API REST</li>
+                        <li>API REST et JavaScript</li>
                         <li>Consultation & Modération</li>
                         <li>Reporting</li>
                         <li>Alertes &amp; Notifications par e-mail</li>
