--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="container">
     <div class="row header">
         <div class="col-md-2">
-            <img src="http://sfmpraveen.com/images/default.gif" alt="David Delevoye" class="img-responsive img-circle img-thumbnail">
+            <img src="images/photo.jpg" alt="David Delevoye" class="img-responsive img-circle img-thumbnail">
         </div>
         <div class="col-md-8 col-md-offset-2">
             <h1 class="light">David <span class="dark">Delevoye</span></h1>
