--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 					</ul>
 					<h4>Liens</h4>
 					<ul class="list-unstyled">
+						<li><i class="fa fa-user"></i> <a href="http://daviddel.github.io/" target="_blank">http://daviddel.github.io/</a></li>
 						<li><i class="fa fa-twitter"></i> <a href="https://twitter.com/DavidDelevoye" target="_blank">https://twitter.com/DavidDelevoye</a></li>
 						<li><i class="fa fa-github"></i> <a href="https://github.com/daviddel" target="_blank">https://github.com/daviddel</a></li>
 						<li><a href="http://www.viadeo.com/fr/profile/david.delevoye1" target="_blank">http://www.viadeo.com/fr/profile/david.delevoye1</a></li>
