--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
                                 </div>
                             </div>
                         </dd>
+                        <dt>Docker</dt>
+                        <dd>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
+                                    <span class="sr-only">60%</span>
+                                </div>
+                            </div>
+                        </dd>
                     </dl>
 					<hr />
 					<h4 class="dark">Bases de <span class="light">données</span></h4>
@@ -418,7 +426,7 @@
                         <dd>
 							<div class="progress">
 								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
-									<span class="sr-only">50%</span>
+									<span class="sr-only">60%</span>
 								</div>
 							</div>
 						</dd>
