--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<li><i class="fa fa-user"></i> <a href="http://daviddel.github.io/" target="_blank">http://daviddel.github.io/</a></li>
 						<li><i class="fa fa-twitter"></i> <a href="https://twitter.com/DavidDelevoye" target="_blank">https://twitter.com/DavidDelevoye</a></li>
 						<li><i class="fa fa-github"></i> <a href="https://github.com/daviddel" target="_blank">https://github.com/daviddel</a></li>
-						<li><a href="http://www.viadeo.com/fr/profile/david.delevoye1" target="_blank">http://www.viadeo.com/fr/profile/david.delevoye1</a></li>
+						<li><i class="fa fa-viadeo"></i> <a href="http://www.viadeo.com/fr/profile/david.delevoye1" target="_blank">http://www.viadeo.com/fr/profile/david.delevoye1</a></li>
 						<li><i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/daviddelevoye" target="_blank">https://www.linkedin.com/in/daviddelevoye</a></li>
 					</ul>
                 </div>
