--- a/vince.html
+++ b/vince.html
@@ -354,21 +354,19 @@
                     </p>
                     <span class="label label-info">Python</span>
                     <hr />
-                    <img src="images/leroymerlin.jpg" alt="Leroy Merlin" class="pull-right img-responsive" />
+                    <img src="images/leroy_merlin.png" alt="Leroy Merlin" class="pull-right img-responsive" />
                     <h4>Leroy Merlin</h4>
 					<h5>Manutention /// 2016 (2 mois) - Job d'été</h5>
                     <p>
 						<i>Mise en rayon</i>
                     </p>
 					<hr />
-					<img src="images/autinor.jpg" alt="Autinor" class="pull-right img-responsive" />
 					<h4>Autinor (Avelin)</h4>
 					<h5>Manutention /// 2013 (1 mois) - Stage</h5>
 					<p>
 						<i>Configuration de commande pour ascenseurs</i>
 					</p>
 					<hr />
-					<img src="images/autinor.jpg" alt="Autinor" class="pull-right img-responsive" />
 					<h4>Menelec (Wahagnies)</h4>
 					<h5>Manutention /// 2012 (2 mois) - Stage</h5>
 					<p>
