--- a/vince.html
+++ b/vince.html
@@ -110,8 +110,8 @@
 					</ul>
 					<h4>Liens</h4>
 					<ul class="list-unstyled">
-						<li><i class="fa fa-user"></i> <a href="http://daviddel.github.io/" target="_blank">http://vincedel.github.io/</a></li>
-						<li><i class="fa fa-github"></i> <a href="https://github.com/daviddel" target="_blank">https://github.com/vincedel</a></li>
+						<li><i class="fa fa-user"></i> <a href="http://vincedel.github.io/" target="_blank">http://vincedel.github.io/</a></li>
+						<li><i class="fa fa-github"></i> <a href="https://github.com/vincedel" target="_blank">https://github.com/vincedel</a></li>
 					</ul>
                 </div>
                 <div class="block">
