--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="container">
     <div class="row header">
         <div class="col-md-2">
-            <img src="images/photo.jpg" alt="Vincent Delevoye" class="img-responsive img-circle img-thumbnail">
+            <img src="images/photoCv.jpg" alt="Vincent Delevoye" class="img-responsive img-circle img-thumbnail">
         </div>
         <div class="col-md-8 col-md-offset-2">
             <h1 class="light">Vincent <span class="dark">Delevoye</span></h1>
@@ -153,16 +153,16 @@
 						<dt>C#\C++</dt>
 						<dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
-									<span class="sr-only">50%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 40%">
+									<span class="sr-only">40%</span>
 								</div>
 							</div>
 						</dd>
                         <dt>Git</dt>
                         <dd>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
-                                    <span class="sr-only">60%</span>
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
+                                    <span class="sr-only">50%</span>
                                 </div>
                             </div>
                         </dd>
@@ -181,16 +181,8 @@
                         <dt>MySQL</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 80%">
-									<span class="sr-only">80%</span>
-								</div>
-							</div>
-						</dd>
-                        <dt>ElasticSearch</dt>
-                        <dd>
-							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 80%">
-									<span class="sr-only">80%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
+									<span class="sr-only">60%</span>
 								</div>
 							</div>
 						</dd>
@@ -201,56 +193,32 @@
                         <dt>Linux Ubuntu / Debian</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 70%">
-									<span class="sr-only">70%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 40%">
+									<span class="sr-only">40%</span>
 								</div>
 							</div>
 						</dd>
 						<dt>Apache 2</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 80%">
-									<span class="sr-only">80%</span>
-								</div>
-							</div>
-						</dd>
-                        <dt>NGinx</dt>
-                        <dd>
-							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
-									<span class="sr-only">50%</span>
-								</div>
-							</div>
-						</dd>
-						<dt>IIS</dt>
-                        <dd>
-							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 40%">
-									<span class="sr-only">40%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
+									<span class="sr-only">60%</span>
 								</div>
 							</div>
 						</dd>
                         <dt>Jenkins</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 30%">
-									<span class="sr-only">30%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 15%">
+									<span class="sr-only">15%</span>
 								</div>
 							</div>
 						</dd>
 						<dt>Sonar</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 30%">
-									<span class="sr-only">30%</span>
-								</div>
-							</div>
-						</dd>
-						<dt>Docker</dt>
-						<dd>
-							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
-									<span class="sr-only">60%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 10%">
+									<span class="sr-only">10%</span>
 								</div>
 							</div>
 						</dd>
@@ -261,24 +229,24 @@
                         <dt>HTML5</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 90%">
-									<span class="sr-only">90%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 65%">
+									<span class="sr-only">65%</span>
 								</div>
 							</div>
 						</dd>
 						<dt>CSS3</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 80%">
-									<span class="sr-only">80%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
+									<span class="sr-only">60%</span>
 								</div>
 							</div>
 						</dd>
                         <dt>Responsive Design</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 70%">
-									<span class="sr-only">70%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 45%">
+									<span class="sr-only">45%</span>
 								</div>
 							</div>
 						</dd>
@@ -286,27 +254,11 @@
 					<hr />
 					<h4 class="dark">Gestion de <span class="light">projet</span></h4>
                     <dl class="dl-horizontal">
-                        <dt>SCRUM</dt>
-                        <dd>
-							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
-									<span class="sr-only">60%</span>
-								</div>
-							</div>
-						</dd>
-                        <dt>Kanban</dt>
-                        <dd>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
-                                    <span class="sr-only">60%</span>
-                                </div>
-                            </div>
-                        </dd>
 						<dt>Intégration continue</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
-									<span class="sr-only">60%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 35%">
+									<span class="sr-only">35%</span>
 								</div>
 							</div>
 						</dd>
@@ -341,7 +293,6 @@
                     </p>
                     <span class="label label-info">Symfony2</span>
 					<span class="label label-success">MySQL</span>
-					<span class="label label-success">ElasticSearch</span>
                     <span class="label label-primary">Git</span>
                     <span class="label label-primary">Behat</span>
 					<span class="label label-primary">Jenkins</span>
@@ -378,7 +329,7 @@
                     <h4>BTS Web /// 2<sup>ème</sup>année</h4>
                     <h5>EFFICOM Lille /// 2016 &rsaquo; 2017</h5>
                     <hr />
-					<h4>BTS Web /// 1<sup>ère</sup> et 2<sup>ème</sup>année</h4>
+					<h4>Associate of Science /// 1<sup>ère</sup> et 2<sup>ème</sup>année</h4>
 					<h5>SUPINFO Lille /// 2014 &rsaquo; 2016</h5>
 					<hr />
 					<h4>BTS CRSA (Electrotechnique) /// 1<sup>ère</sup> année</h4>
