--- a/index.html
+++ b/index.html
@@ -153,24 +153,24 @@
 						<dt>C#\C++</dt>
 						<dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 40%">
-									<span class="sr-only">40%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">
+									<span class="sr-only">20%</span>
 								</div>
 							</div>
 						</dd>
                         <dt>Git</dt>
                         <dd>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
-                                    <span class="sr-only">50%</span>
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 30%">
+                                    <span class="sr-only">30%</span>
                                 </div>
                             </div>
                         </dd>
                         <dt>Behat</dt>
                         <dd>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
-                                    <span class="sr-only">60%</span>
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
+                                    <span class="sr-only">50%</span>
                                 </div>
                             </div>
                         </dd>
@@ -193,8 +193,8 @@
                         <dt>Linux Ubuntu / Debian</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 40%">
-									<span class="sr-only">40%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
+									<span class="sr-only">50%</span>
 								</div>
 							</div>
 						</dd>
@@ -209,8 +209,8 @@
                         <dt>Jenkins</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 15%">
-									<span class="sr-only">15%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">
+									<span class="sr-only">20%</span>
 								</div>
 							</div>
 						</dd>
@@ -229,8 +229,8 @@
                         <dt>HTML5</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 65%">
-									<span class="sr-only">65%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 60%">
+									<span class="sr-only">60%</span>
 								</div>
 							</div>
 						</dd>
@@ -245,8 +245,16 @@
                         <dt>Responsive Design</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 45%">
-									<span class="sr-only">45%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 40%">
+									<span class="sr-only">40%</span>
+								</div>
+							</div>
+						</dd>
+						<dt>Photoshop</dt>
+                        <dd>
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">
+									<span class="sr-only">20%</span>
 								</div>
 							</div>
 						</dd>
@@ -257,8 +265,8 @@
 						<dt>Intégration continue</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 35%">
-									<span class="sr-only">35%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 30%">
+									<span class="sr-only">30%</span>
 								</div>
 							</div>
 						</dd>
