changement emploi et note

--- a/index.html
+++ b/index.html
@@ -161,16 +161,16 @@
                         <dt>Git</dt>
                         <dd>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 30%">
-                                    <span class="sr-only">30%</span>
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
+                                    <span class="sr-only">50%</span>
                                 </div>
                             </div>
                         </dd>
                         <dt>Behat</dt>
                         <dd>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
-                                    <span class="sr-only">50%</span>
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 80%">
+                                    <span class="sr-only">80%</span>
                                 </div>
                             </div>
                         </dd>
@@ -209,16 +209,16 @@
                         <dt>Jenkins</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">
-									<span class="sr-only">20%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
+									<span class="sr-only">50%</span>
 								</div>
 							</div>
 						</dd>
 						<dt>Sonar</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 10%">
-									<span class="sr-only">10%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 40%">
+									<span class="sr-only">40%</span>
 								</div>
 							</div>
 						</dd>
@@ -265,8 +265,8 @@
 						<dt>Intégration continue</dt>
                         <dd>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 30%">
-									<span class="sr-only">30%</span>
+								<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 50%">
+									<span class="sr-only">50%</span>
 								</div>
 							</div>
 						</dd>
@@ -315,19 +315,19 @@
                     <hr />
                     <img src="images/leroy_merlin.png" alt="Leroy Merlin" class="pull-right img-responsive" />
                     <h4>Leroy Merlin</h4>
-					<h5>Manutention /// 2016 (2 mois) - Job d'été</h5>
+					<h5>Mise en Rayon /// 2016 (2 mois) - Job d'été</h5>
                     <p>
 						<i>Mise en rayon</i>
                     </p>
 					<hr />
 					<h4>Autinor (Avelin)</h4>
-					<h5>Manutention /// 2013 (1 mois) - Stage</h5>
+					<h5>Electricien Industriel /// 2013 (1 mois) - Stage</h5>
 					<p>
 						<i>Configuration de commande pour ascenseurs</i>
 					</p>
 					<hr />
 					<h4>Menelec (Wahagnies)</h4>
-					<h5>Manutention /// 2012 (2 mois) - Stage</h5>
+					<h5>Electricien du Batiment /// 2012 (2 mois) - Stage</h5>
 					<p>
 						<i>Travaux d’électricité</i>
 					</p>
