--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
                     </p>
 					<hr />
 					<h4>Autinor (Avelin)</h4>
-					<h5>Electricien Industriel /// 2013 (1 mois) - Stage</h5>
+					<h5>Electricien /// 2013 (1 mois) - Stage</h5>
 					<p>
 						<i>Configuration de commande pour ascenseurs</i>
 					</p>
 					<hr />
 					<h4>Menelec (Wahagnies)</h4>
-					<h5>Electricien du Batiment /// 2012 (2 mois) - Stage</h5>
+					<h5>Electricien /// 2012 (2 mois) - Stage</h5>
 					<p>
 						<i>Travaux d’électricité</i>
 					</p>
