--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <hr class="star-light">
                         <span class="skills">Développeur Web</span></br>
                         <span class="skills">21 ans</span></br>
-                        <span class="skills">Fretin</span></br>
+                        <span class="skills">Permis B</span></br>
                         <span class="skills">Tel: +33 6 60 21 14 23</span></br>
                         <span class="skills">Mail: vincentdelevoye@gmail.com</span>
                     </div>
@@ -265,25 +265,7 @@
                     <hr class="star-light">
                 </div>
             </div>
-            <div class="row white-job">
-                <div class="col-sm-12">
-                        <h3 class="text-center">Décathlon Services</h3>
-                        <h4 class="text-center">Développeur / 2015 (2 mois) - stage</h4>
-                        <p>
-                            Mise en place de l'intégration continue pour les projets Trocathlon et un site de location de matériel [Plus en ligne]
-                            <br> - Création des tests Behat
-                            <br> - Création des jobs sur Jenkins
-                            <br> - Refactoring à l'aide de l'outil SonarQube
-                        </p>
-                    <div class="row">
-                        <span class="label">Symfony 2</span>
-                        <span class="label">My SQL</span>
-                        <span class="label">Git</span>
-                        <span class="label">Behat</span>
-                        <span class="label">Jenkins</span>
-                    </div>
-                </div>
-            </div>
+            
             <div class="row white-job">
                 <div class="col-sm-12">
                         <h3 class="text-center">Trans-Ghestem</h3>
@@ -310,7 +292,27 @@
                        Mise en rayon
                     </p>
                 </div>
-            </div>            
+            </div>  
+
+            <div class="row white-job">
+                <div class="col-sm-12">
+                        <h3 class="text-center">Décathlon Services</h3>
+                        <h4 class="text-center">Développeur / 2015 (2 mois) - stage</h4>
+                        <p>
+                            Mise en place de l'intégration continue pour les projets Trocathlon et un site de location de matériel [Plus en ligne]
+                            <br> - Création des tests Behat
+                            <br> - Création des jobs sur Jenkins
+                            <br> - Refactoring à l'aide de l'outil SonarQube
+                        </p>
+                    <div class="row">
+                        <span class="label">Symfony 2</span>
+                        <span class="label">My SQL</span>
+                        <span class="label">Git</span>
+                        <span class="label">Behat</span>
+                        <span class="label">Jenkins</span>
+                    </div>
+                </div>
+            </div>          
         </div>
     </section>
 
