--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h2>Compétences professionnels</h2>
+                    <h2>Compétences professionnelles</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -261,7 +261,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h2>Expériences Professionnels</h2>
+                    <h2>Expériences Professionnelles</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -286,16 +286,6 @@
 
             <div class="row white-job">
                 <div class="col-sm-12">
-                    <h3 class="text-center">Leroy Merlin</h3>
-                    <h4 class="text-center">Mise en rayon / 2016 (2 mois) - job d'été</h4>
-                    <p>
-                       Mise en rayon
-                    </p>
-                </div>
-            </div>  
-
-            <div class="row white-job">
-                <div class="col-sm-12">
                         <h3 class="text-center">Décathlon Services</h3>
                         <h4 class="text-center">Développeur / 2015 (2 mois) - stage</h4>
                         <p>
@@ -312,7 +302,17 @@
                         <span class="label">Jenkins</span>
                     </div>
                 </div>
-            </div>          
+            </div>
+
+            <div class="row white-job">
+                <div class="col-sm-12">
+                    <h3 class="text-center">Leroy Merlin</h3>
+                    <h4 class="text-center">Mise en rayon / 2016 (2 mois) - job d'été</h4>
+                    <p>
+                       Mise en rayon
+                    </p>
+                </div>
+            </div>            
         </div>
     </section>
 
