--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <hr class="star-light">
                 </div>
             </div>
-            
+
             <div class="row white-job">
                 <div class="col-sm-12">
                         <h3 class="text-center">Trans-Ghestem</h3>
@@ -312,7 +312,7 @@
                        Mise en rayon
                     </p>
                 </div>
-            </div>            
+            </div>
         </div>
     </section>
 
@@ -417,6 +417,16 @@
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.js"></script>
+
+    <script type="text/javascript">
+      $('.linkedin').on('mouseover', function(){
+        $('.linkedin').css('background-image', 'url(./img/linkedin-hover.png)');
+        $('.linkedin').css('background-position', 'center');
+      });
+      $('.linkedin').on('mouseout', function(){
+        $('.linkedin').css('background-image', 'url(./img/linkedin.png)')
+      });
+    </script>
 
 </body>
 
