--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
 
     <script type="text/javascript">
       $('.linkedin').on('mouseover', function(){
-        $('.linkedin').css('background-image', 'url(./img/linkedin-hover.png)');
+        $('.linkedin').css('background-image', 'url(../img/linkedin-hover.png)');
         $('.linkedin').css('background-position', 'center');
       });
       $('.linkedin').on('mouseout', function(){
-        $('.linkedin').css('background-image', 'url(./img/linkedin.png)')
+        $('.linkedin').css('background-image', 'url(../img/linkedin.png)')
       });
     </script>
 
