ajout ALW et BTS

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <div class="c100 p50">
-                        <span class="percent">50%</span>
-                        <span class="comp">JavaScript</span>
+                    <div class="c100 p80">
+                        <span class="percent">80%</span>
+                        <span class="comp">SASS</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -139,7 +139,7 @@
                 <div class="col-sm-3 text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
-                        <span class="comp">jQuery</span>
+                        <span class="comp">JavaScript</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -148,6 +148,16 @@
                 </div>
             </div>
             <div class="row row-comp">
+              <div class="col-sm-3 text-center">
+                  <div class="c100 p50">
+                      <span class="percent">50%</span>
+                      <span class="comp">jQuery</span>
+                      <div class="slice">
+                          <div class="bar"></div>
+                          <div class="fill"></div>
+                      </div>
+                  </div>
+              </div>
                 <div class="col-sm-3 text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
@@ -268,10 +278,28 @@
 
             <div class="row white-job">
                 <div class="col-sm-12">
+                        <h3 class="text-center">A Life Worldwide</h3>
+                        <h4 class="text-center">Développeur / 2016 (2 mois) - stage</h4>
+                        <p>
+                            Améliorations des sites <a target="_blank" href="https://www.alw-shop.fr/" class="underline-a">A Life Wordlwide</a> et <a target="_blank" href="https://ma-boutique-club.com/" class="underline-a">Ma boutique club</a>
+                        </p>
+                    <div class="row">
+                        <span class="label">Wordpress</span>
+                        <span class="label">HTML</span>
+                        <span class="label">CSS</span>
+                        <span class="label">JavaScript</span>
+                        <span class="label">PHP</span>
+                        <span class="label">jQuery</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row white-job">
+                <div class="col-sm-12">
                         <h3 class="text-center">Trans-Ghestem</h3>
                         <h4 class="text-center">Développeur / 2016 (2 mois) - stage</h4>
                         <p>
-                            Création du site de l'entreprise <a href="http://www.ghestem.fr" class="underline-a">Trans-Ghestem</a>
+                            Création du site de l'entreprise <a target="_blank" href="http://www.ghestem.fr" class="underline-a">Trans-Ghestem</a>
                         </p>
                     <div class="row">
                         <span class="label">Wordpress</span>
@@ -289,7 +317,7 @@
                         <h3 class="text-center">Décathlon Services</h3>
                         <h4 class="text-center">Développeur / 2015 (2 mois) - stage</h4>
                         <p>
-                            Mise en place de l'intégration continue pour les projets Trocathlon et un site de location de matériel [Plus en ligne]
+                            Mise en place de l'intégration continue pour les projets Trocathlon et un site de location de matériel
                             <br> - Création des tests Behat
                             <br> - Création des jobs sur Jenkins
                             <br> - Refactoring à l'aide de l'outil SonarQube
@@ -331,6 +359,7 @@
                     <h4>2ème année</h4>
                     <h4>EFFICOM Lille</h4>
                     <h4>2016 > 2017</h4>
+                    <h4>Obtenu</h4>
                 </div>
                 <div class="col-sm-3 text-center">
                     <h3>Associate of Science</h3>
@@ -348,6 +377,7 @@
                     <h3>Bac Pro ELEEC</h3>
                     <h4>Lycée les Hauts de Flandre Seclin</h4>
                     <h4>2011 > 2013</h4>
+                    <h4>Obtenu</h4>
                 </div>
             </div>
         </div>
@@ -364,7 +394,6 @@
             <div class="row">
                 <div class="col-sm-3 text-center">
                     <img src="img/basket.png" alt="">
-
                     <h3>Sport</h3>
                 </div>
                 <div class="col-sm-3 text-center">
@@ -392,7 +421,7 @@
                         <p>Copyright &copy; Vincent Delevoye</p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="https://fr.linkedin.com/in/vincent-delevoye-809a35127" class="btn-social btn-outline linkedin"></a>
+                        <a target="_blank" href="https://fr.linkedin.com/in/vincent-delevoye-809a35127" class="btn-social btn-outline linkedin"></a>
                     </div>
                 </div>
             </div>
