--- a/index.html
+++ b/index.html
@@ -235,6 +235,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p40">
+                        <span class="percent">40%</span>
+                        <span class="comp">Docker</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row row-comp-title row-comp">
                 <div class="col-sm-12">
